Trying a workaround for images overflowing (to be fixed)

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ body {
   display: flex;
   justify-content: space-evenly;
   padding: 90px;
+  flex;
 }
 
 .maintext {
@@ -91,6 +92,7 @@ body {
   display: flex;
   gap: 16px;
   flex: auto;
+  overflow: auto;
 }
 
 /* Content */
